--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "axios": "^0.20.0",
     "expo": "^38.0.0",
     "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
@@ -32,7 +32,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "^8.2.3"
+    "babel-preset-expo": "^8.2.3",
+    "jest": "^26.4.2"
   },
   "private": true
 }
